--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGODB_URL=mongodb://127.0.0.1/test
 MONGODB_URL_1=mongodb://127.0.0.1/test1
 MONGODB_URL_2=mongodb://127.0.0.1/test2
+MONGODB_URL_3=mongodb://127.0.0.1/test3
